o [greg] September 19th 2003

  Added patch from Jon Ringle to properly deal with BLFS
  commands of the form <screen><userinput><command>.

o [timothy] May 9th

  Added LFSCMD_BOOK environment variable for the default
  index.xml path.

o [timothy] March 2nd

  Rewrote command-line parser and much of the XML code.
  Added option -q, which returns pages matching a regex
  query. Added option -e for executing commands instead
  of printing them. This may prove helpful for creating
  dynamic installation scripts.
  
  Attempted to conform old/new lfs books by removing
  double ampersands and such. This should cut down on
  diff spam.

o [timothy] Feburary 19th

  Added sysvinit-style prefixes patch. Contributed by
  Kevan Shea.
  
  <!> patch moved to:
  http://linuxfromscratch.org/~timothy/lfscmd/contrib/lfscmd-0.5-sysv.patch